--- a/server/config/routes.yaml
+++ b/server/config/routes.yaml
@@ -3,3 +3,11 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+kernel:
+    resource: ../src/Kernel.php
+    type: annotation
+
+api_login_check:
+    path: /api/auth
+    methods: ['POST']
