--- a/server/config/packages/security.yaml
+++ b/server/config/packages/security.yaml
@@ -1,15 +1,13 @@
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+    enable_authenticator_manager: true
     password_hashers:
         App\Entity\User:
             algorithm: bcrypt
             cost: 12
-        # Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
-        users:
+        app_user_provider:
             entity:
                 class: App\Entity\User
                 property: email
@@ -17,39 +15,28 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
+        
         login:
             pattern: ^/api/auth
             stateless: true
             json_login:
                 check_path: /api/auth
+                username_path: email
+                password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
         api:
-            pattern: ^/api
+            pattern:   ^/api
             stateless: true
             jwt: ~
-
-
-        # main:
-        #     json_login:
-        #         check_path: auth # The name in routes.yaml is enough for mapping
-        #         username_path: email
-        #         password_path: password
-        #         success_handler: lexik_jwt_authentication.handler.authentication_success
-        #         failure_handler: lexik_jwt_authentication.handler.authentication_failure
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/auth, roles: PUBLIC_ACCESS }
-        # - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/auth, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        # - { path: ^/api, roles: [ROLE_ADMIN, ROLE_USER] }
+
 
 when@test:
     security:
@@ -63,3 +50,32 @@ when@test:
                 cost: 12 # Lowest possible value for bcrypt
                 time_cost: 3 # Lowest possible value for argon
                 memory_cost: 10 # Lowest possible value for argon
+
+
+
+
+
+
+
+                       # main:
+        #     stateless: true
+        #     provider: app_user_provider
+        #     json_login:
+        #         check_path: /api/auth
+        #         username_path: email
+        #         password_path: password
+        #         success_handler: lexik_jwt_authentication.handler.authentication_success
+        #         failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        #     jwt: ~
+
+        # login:
+        #     pattern: ^/api/auth
+        #     stateless: true
+        #     provider: app_user_provider
+        #     # anonymous: true
+        #     json_login:
+        #         check_path: /api/auth
+        #         username_path: email
+        #         password_path: password
+        #         success_handler: lexik_jwt_authentication.handler.authentication_success
+        #         failure_handler: lexik_jwt_authentication.handler.authentication_failure
