--- a/server/config/packages/security.yaml
+++ b/server/config/packages/security.yaml
@@ -25,6 +25,11 @@ security:
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+        
+        # main:
+        #     logout:
+        #         path: app_logout
+
         api:
             pattern:   ^/api
             stateless: true
