--- a/server/config/services.yaml
+++ b/server/config/services.yaml
@@ -20,5 +20,11 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Middleware\JwtMiddleware:
+        arguments:
+            $jwtManager: '@lexik_jwt_authentication.jwt_manager'
+            $tokenStorage: '@security.token_storage'
+            $userRepository: '@App\Repository\UserRepository'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
