--- a/server/config/packages/security.yaml
+++ b/server/config/packages/security.yaml
@@ -17,29 +17,38 @@ security:
             security: false
         
         login:
-            pattern: ^/api/auth
+            pattern: ^/auth
             stateless: true
             json_login:
-                check_path: /api/auth
+                check_path: /auth
                 username_path: email
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
         
-        # main:
-        #     logout:
-        #         path: app_logout
+            logout:
+                path: logout
+
+        # api_register:
+        #     pattern: ^/api/register
+        #     stateless: true
+        #     anonymous: true
 
         api:
-            pattern:   ^/api
+            pattern: ^/api
             stateless: true
             jwt: ~
+        
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/auth, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/auth, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/users,roles: ROLE_ADMIN }
+        - { path: ^/api/category,roles: ROLE_ADMIN }
+        
         # - { path: ^/api, roles: [ROLE_ADMIN, ROLE_USER] }
 
 
