--- a/server/config/services.yaml
+++ b/server/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    # document_directory: '%kernel.project_dir%/public/uploads/documents'
+
 
 services:
     # default configuration for services in *this* file
@@ -25,6 +27,7 @@ services:
             $jwtManager: '@lexik_jwt_authentication.jwt_manager'
             $tokenStorage: '@security.token_storage'
             $userRepository: '@App\Repository\UserRepository'
+
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
