--- a/server/config/services.yaml
+++ b/server/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    # document_directory: '%kernel.project_dir%/public/uploads/documents'
+    document_directory: '%kernel.project_dir%/public/uploads/documents'
 
 
 services:
@@ -28,6 +28,12 @@ services:
             $tokenStorage: '@security.token_storage'
             $userRepository: '@App\Repository\UserRepository'
 
+    App\Repository\DocumentRepository:
+        arguments: ['@doctrine']
 
+    App\Controller\DocumentController:
+        arguments:
+            $documentRepository: '@App\Repository\DocumentRepository'
+        tags: ['controller.service_arguments']
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
