--- a/server/composer.json
+++ b/server/composer.json
@@ -16,6 +16,7 @@
         "phpstan/phpdoc-parser": "^1.23",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "6.3.*",
+        "symfony/browser-kit": "6.3.*",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/expression-language": "6.3.*",
@@ -80,7 +81,10 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "phpunit/phpunit": "^9.5",
+        "symfony/css-selector": "6.3.*",
         "symfony/maker-bundle": "^1.50",
+        "symfony/phpunit-bridge": "^6.3",
         "symfony/stopwatch": "6.3.*",
         "symfony/web-profiler-bundle": "6.3.*"
     }
