--- a/server/config/services.yaml
+++ b/server/config/services.yaml
@@ -4,8 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    document_directory: '%kernel.project_dir%/public/uploads/documents'
-
+    uploads_directory: '%kernel.project_dir%/public/uploads/documents'
 
 services:
     # default configuration for services in *this* file
@@ -30,6 +29,7 @@ services:
 
     App\Repository\DocumentRepository:
         arguments: ['@doctrine']
+
 
     # App\Controller\DocumentController:
     #     arguments:
