added document service and mobile app

--- a/server/.env
+++ b/server/.env
@@ -32,7 +32,8 @@ DATABASE_URL="mysql://warranty_user:warranty_pass@127.0.0.1:3306/warranty_databa
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+# CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+# CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1|127.0.0.1\.com)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
