--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   shared_preferences: ^2.0.7
+  file_picker: ^5.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
