--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.3
   shared_preferences: ^2.0.7
   file_picker: ^5.0.1
+  connectivity: ^3.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
